@@ -1,5 +1,11 @@
 2008-11-20  Dan Williams  <dcbw@redhat.com>
 
+	* src/gconf-helpers/gconf-helpers.c
+		- (string_in_list): implement locally now that nm_utils_string_in_list
+			was removed from libnm-util
+
+2008-11-20  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-device-wifi.c
 		- (wireless_dialog_response_cb): update for nm_setting_new_from_hash()
 
